# knowledge_capture

./: .env.example  .gitignore  README.md  pyproject.toml  worker.py
src/: config.py  server.py
src/db/: mongo.py
src/ingestion/: service.py
src/models/: core.py  files.py  task.py
src/retrieval/: service.py
src/routes/: chat.py  files.py
src/services/: chunker.py  ingestion.py  llm.py  queue.py  search.py  storage.py
src/tasks/: ingestion.py
